convert into chatgpt

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Telemage</title>
+    <title>TeleGPT</title>
     <link href="./public/styles.css" rel="stylesheet">
     <link rel="icon" href="./public/favicon.svg">
     {% if status == "SETUP_WEBHOOK" %}
@@ -21,7 +21,7 @@
         {% if status == "SETUP_ENVS" %}
         <p>hey!</p>
         <br />
-        <p>one or both of your configuration variables are not set, please do the following from the telemage
+        <p>one or both of your configuration variables are not set, please do the following from the TeleGPT
             app's card on your deta space canvas:</p>
         <br />
         <ul>
@@ -47,7 +47,7 @@
         <p>
             you can authorize individual users via <a href="./authorize"
             rel="noopener noreferrer">authorize</a>.
-            then just slide into your telemage bot's dms with cheeky prompts.
+            then just slide into your TeleGPT bot's dms with cheeky prompts.
             you should get generated images in response.
         </p>
         <br />
